src/scss/layoutCustomize.scss
/* ... */
.sipSelectForwardingItemContainer {
  overflow: auto;
  max-height: 450px;
}
.sipTableContainer {
  display: block;
  background: #fff;
  box-shadow: 0 2px 5px rgba(159, 163, 183, 0.51053);
  border-radius: 3px;
  width: 100%;
  overflow: auto;
  margin: 0 0 15px;
  .table {
    color: #191919;
    margin: 0;
    min-width: 800px;
    .row {
      margin-left: -10px;
      margin-right: -10px;
    }
    th {
      border-top: none;
      color: $primary;
      font-weight: 600;
    }
    th,
    td {
      padding: 8px;
      vertical-align: middle;
      &:first-child {
        padding: 8px 10px 8px 20px;
      }
    }
    .SipTableFunctionIcon {
      white-space: nowrap;
      .btn {
        padding: 0;
        background: none !important;
        border: none;
        box-shadow: none;
        margin: 0 5px;
        font-size: 12px;
        height: 28px;
        min-height: 0;
      }
    }
    .SipTableFunctionIcon {
      padding: 0;
      background: none !important;
      border: none;
      box-shadow: none;
      margin: 0 5px;
      font-size: 12px;
      height: 28px;
      min-height: 0;
    }
  }
}
.sipTableContainerAmountListContainer {
  position: relative;
  padding-right: 120px;
  background: #fff;
  .sipTableContainer {
    box-shadow: none;
  }
}
.sipTableContainerAmountList {
  .table {
    table-layout: fixed;
    //tbody tr:nth-of-type(odd) {
    //  background: none;
    //  td {
    //    background-color: #f4f4f4;
    //  }
    //}
    td, th {
      padding: 5px;
      word-break: normal;
      height: 55px;
      width: 100px;
      &:first-child {
        width: 120px;
      }
      &:nth-child(5), &:nth-child(9), &:nth-child(12) {
        width: 150px;
      }
      &:nth-child(8), &:nth-child(14) {
        width: 400px;
        word-break: break-word;
      }
      &:nth-child(15) {
        position: absolute;
        right: 0px;
        width: 120px;
        border-bottom: 0px solid #c8ced3;
        text-align: center;
        justify-content: center;
      }
    }
    th {
      white-space: nowrap;
      &:nth-child(15) {
        display: flex;
        align-items: center;
        border-bottom: none;
        padding-bottom: 10px;
        &:after {
          content: '';
          position: absolute;
          bottom: -1px;
          width: 100%;
          border-bottom: 2px solid #c8ced3;
          right: 0;
        }
      }
    }
    td {
      &:nth-child(15) {
        background: #fff !important;
        &:after {
          content: '';
          position: absolute;
          bottom: -1px;
          width: 100%;
          border-bottom: 1px solid #c8ced3;
          right: 0;
        }
        .sipTableAmountListOption {
          text-align: center;
        }
      }
    }
    .sipTableAmountListGroup {
      height: 32px;
      & > span {
        position: absolute;
        left: 15px;
      }
      & > .btn {
        position: absolute;
        right: 10px;
        padding: 0 8px;
      }
      & > .dropdown {
        position: absolute;
        right: 40px;
        padding: 0 8px;
      }
    }
  }
}
.sipTableContainerAmountListNoFix {
  .table {
    min-width: 2600px;
    td, th {
      &:nth-child(15) {
        position: relative;
        width: 120px;
        display: table-cell;
        padding-bottom: 2px;
        text-align: left;
        &:after {
          display: none;
        }
      }
      &:nth-child(14), &:nth-child(16), &:nth-child(17) {
        width: 150px;
      }
      &:nth-child(18) {
        width: 400px;
      }
      &:nth-child(19) {
        width: 200px;
      }
    }
    td {
      &:nth-child(15) {
        background: none !important;
      }
      &:nth-child(18) {
        max-width: 600px;
        word-break: break-word;
      }
    }
  }
}
.sipTableAmountListOption {
  & > .btn {
    padding: 0 5px;
    box-shadow: none !important;
    background: none !important;
    border: none;
  }
  .dropdown-menu {

  }
  .dropdown-item {
    padding: 8px 10px 8px 35px;
    position: relative;
    img {
      position: absolute;
      top: 7px;
      left: 7px;
    }
  }
}
.sipTableRowClickable tr {
  cursor: pointer;
}
.modal .sipTableContainer {
  box-shadow: none;
}
.sipLine {
  border-bottom: 1px solid #d6d6d6;
}
.sipTableBangKeFicoTr {
  td {
    &:nth-child(8), &:nth-child(9), &:nth-child(11), &:nth-child(12), &:nth-child(13), &:nth-child(14), &:nth-child(15), &:nth-child(16) {
      text-align: right;
    }
  }
}
.app-header .navbar-brand {
  width: 195px;
}
.sidebar .sidebar-nav,
.sidebar .nav {
  width: 240px;
}
html:not([dir='rtl']) .sidebar {
  margin-left: -240px;
}
.sipFlatBtn {
  padding: 0;
  font-size: inherit;
  background: none !important;
  border: none;
  line-height: inherit;
  font-weight: inherit;
  color: $primary !important;
  box-shadow: none !important;
  position: relative;
  top: -1px;
  min-height: 0;
  height: auto;
}
/* ... */

